# serializer version: 1
# name: test_calc_eq_matrix_b[1x1]
  tuple(
    array([0, 0, 0, 2, 2, 4, 1, 1, 1, 3, 3, 5, 2, 4, 6, 4, 6, 6, 3, 5, 7, 5,
         7, 7], dtype=int32),
    array([0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5, 0, 1, 2, 3,
         4, 5], dtype=int32),
  )
# ---
# name: test_calc_eq_matrix_b[1x1].1
  2
# ---
# name: test_calc_eq_matrix_b[1x1].2
  tuple(
    8,
    6,
  )
# ---
# name: test_calc_eq_matrix_b[2x2]
  tuple(
    array([ 0,  0,  0,  0,  2,  2,  2,  2,  4,  4,  6,  6,  6,  8,  8,  8,  8,
         10, 10, 10, 12, 14,  1,  1,  1,  1,  3,  3,  3,  3,  5,  5,  7,  7,
          7,  9,  9,  9,  9, 11, 11, 11, 13, 15,  2,  6,  8, 10,  4,  6,  8,
         10,  8, 10,  8, 12, 14, 10, 12, 14, 16, 12, 14, 16, 14, 16,  3,  7,
          9, 11,  5,  7,  9, 11,  9, 11,  9, 13, 15, 11, 13, 15, 17, 13, 15,
         17, 15, 17], dtype=int32),
    array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,
         17, 18, 19, 20, 21,  0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11,
         12, 13, 14, 15, 16, 17, 18, 19, 20, 21,  0,  1,  2,  3,  4,  5,  6,
          7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21,  0,  1,
          2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17, 18,
         19, 20, 21], dtype=int32),
  )
# ---
# name: test_calc_eq_matrix_b[2x2].1
  2
# ---
# name: test_calc_eq_matrix_b[2x2].2
  tuple(
    18,
    22,
  )
# ---
# name: test_calc_eq_matrix_b[3x6]
  tuple(
    array([ 0,  0,  0,  2,  2,  2,  2,  4,  4,  4,  4,  6,  6,  8,  8,  8, 10,
         10, 10, 10, 12, 12, 12, 12, 14, 14, 16, 16, 16, 18, 18, 18, 18, 20,
         20, 20, 20, 22, 22, 24, 24, 24, 26, 26, 26, 26, 28, 28, 28, 28, 30,
         30, 32, 32, 32, 34, 34, 34, 34, 36, 36, 36, 36, 38, 38, 40, 40, 40,
         42, 42, 42, 42, 44, 44, 44, 44, 46, 46, 48, 50, 52,  1,  1,  1,  3,
          3,  3,  3,  5,  5,  5,  5,  7,  7,  9,  9,  9, 11, 11, 11, 11, 13,
         13, 13, 13, 15, 15, 17, 17, 17, 19, 19, 19, 19, 21, 21, 21, 21, 23,
         23, 25, 25, 25, 27, 27, 27, 27, 29, 29, 29, 29, 31, 31, 33, 33, 33,
         35, 35, 35, 35, 37, 37, 37, 37, 39, 39, 41, 41, 41, 43, 43, 43, 43,
         45, 45, 45, 45, 47, 47, 49, 51, 53,  2,  8, 10,  4,  8, 10, 12,  6,
         10, 12, 14, 12, 14, 10, 16, 18, 12, 16, 18, 20, 14, 18, 20, 22, 20,
         22, 18, 24, 26, 20, 24, 26, 28, 22, 26, 28, 30, 28, 30, 26, 32, 34,
         28, 32, 34, 36, 30, 34, 36, 38, 36, 38, 34, 40, 42, 36, 40, 42, 44,
         38, 42, 44, 46, 44, 46, 42, 48, 50, 44, 48, 50, 52, 46, 50, 52, 54,
         52, 54, 50, 52, 54,  3,  9, 11,  5,  9, 11, 13,  7, 11, 13, 15, 13,
         15, 11, 17, 19, 13, 17, 19, 21, 15, 19, 21, 23, 21, 23, 19, 25, 27,
         21, 25, 27, 29, 23, 27, 29, 31, 29, 31, 27, 33, 35, 29, 33, 35, 37,
         31, 35, 37, 39, 37, 39, 35, 41, 43, 37, 41, 43, 45, 39, 43, 45, 47,
         45, 47, 43, 49, 51, 45, 49, 51, 53, 47, 51, 53, 55, 53, 55, 51, 53,
         55], dtype=int32),
    array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,
         17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33,
         34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50,
         51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67,
         68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80,  0,  1,  2,  3,
          4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20,
         21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37,
         38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54,
         55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71,
         72, 73, 74, 75, 76, 77, 78, 79, 80,  0,  1,  2,  3,  4,  5,  6,  7,
          8,  9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24,
         25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41,
         42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58,
         59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75,
         76, 77, 78, 79, 80,  0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11,
         12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28,
         29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45,
         46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62,
         63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79,
         80], dtype=int32),
  )
# ---
# name: test_calc_eq_matrix_b[3x6].1
  2
# ---
# name: test_calc_eq_matrix_b[3x6].2
  tuple(
    56,
    81,
  )
# ---
# name: test_trussopt[1x1_clarabel]
  tuple(
    np.float64(150.0),
    dict({
      2: 70.710678,
      5: 50.0,
    }),
  )
# ---
# name: test_trussopt[1x1_clarabel].1
  '''
      problem_name filter_level width height n_load_points n_patterns_total n_patterns_active load_large load_small iterations final_volume n_members_final n_nodes n_ground_structure primal_method               notes
  0  1x1 structure          1.0     1      1             1                2                 1       50.0        5.0          2        150.0               6       4                  6   load_factor  1x1 structure test
  '''
# ---
# name: test_trussopt[1x1_mosek]
  tuple(
    np.float64(150.0),
    dict({
      2: 70.710678,
      5: 50.0,
    }),
  )
# ---
# name: test_trussopt[1x1_mosek].1
  '''
      problem_name filter_level width height n_load_points n_patterns_total n_patterns_active load_large load_small iterations final_volume n_members_final n_nodes n_ground_structure primal_method               notes
  0  1x1 structure          1.0     1      1             1                2                 1       50.0        5.0          2        150.0               6       4                  6   load_factor  1x1 structure test
  '''
# ---
# name: test_trussopt[2x2_clarabel]
  tuple(
    np.float64(300.0),
    dict({
      2: 28.894891,
      3: 33.058281,
      22: 28.894891,
      23: 33.058282,
      25: 29.568227,
      26: 20.431773,
      27: 20.431773,
    }),
  )
# ---
# name: test_trussopt[2x2_clarabel].1
  '''
      problem_name filter_level width height n_load_points n_patterns_total n_patterns_active load_large load_small iterations final_volume n_members_final n_nodes n_ground_structure primal_method               notes
  0  2x2 structure          1.0     2      2             1                2                 1       50.0        5.0          2        300.0              22       9                 28   load_factor  2x2 structure test
  '''
# ---
# name: test_trussopt[2x2_mosek]
  tuple(
    np.float64(300.0),
    dict({
      2: 30.394442,
      3: 31.872783,
      22: 30.394442,
      23: 31.872783,
      25: 28.507884,
      26: 21.492116,
      27: 21.492116,
    }),
  )
# ---
# name: test_trussopt[2x2_mosek].1
  '''
      problem_name filter_level width height n_load_points n_patterns_total n_patterns_active load_large load_small iterations final_volume n_members_final n_nodes n_ground_structure primal_method               notes
  0  2x2 structure          1.0     2      2             1                2                 1       50.0        5.0          3        300.0              22       9                 28   load_factor  2x2 structure test
  '''
# ---
# name: test_trussopt[parallel_forces_clarabel]
  tuple(
    np.float64(1500.0),
    dict({
      0: 250.0,
      2: 70.710678,
      4: 150.0,
      5: 70.710678,
      7: 70.710678,
      9: 50.0,
      11: 70.710678,
      13: 70.710678,
      15: 70.710678,
      17: 250.0,
      18: 150.0,
      19: 50.0,
    }),
  )
# ---
# name: test_trussopt[parallel_forces_clarabel].1
  '''
        problem_name filter_level width height n_load_points n_patterns_total n_patterns_active load_large load_small iterations final_volume n_members_final n_nodes n_ground_structure primal_method                 notes
  0  parallel forces          1.0     3      1             2                4                 1       50.0        5.0          2       1500.0              16       8                 20   load_factor  parallel forces test
  '''
# ---
# name: test_trussopt[parallel_forces_mosek]
  tuple(
    np.float64(1500.0),
    dict({
      0: 250.0,
      2: 70.710678,
      4: 150.0,
      5: 70.710678,
      7: 70.710678,
      9: 50.0,
      11: 70.710678,
      13: 70.710678,
      15: 70.710678,
      17: 250.0,
      18: 150.0,
      19: 50.0,
    }),
  )
# ---
# name: test_trussopt[parallel_forces_mosek].1
  '''
        problem_name filter_level width height n_load_points n_patterns_total n_patterns_active load_large load_small iterations final_volume n_members_final n_nodes n_ground_structure primal_method                 notes
  0  parallel forces          1.0     3      1             2                4                 1       50.0        5.0          2       1500.0              16       8                 20   load_factor  parallel forces test
  '''
# ---
# name: test_trussopt[short_cantilever_clarabel]
  tuple(
    np.float64(300.0),
    dict({
      2: 35.355339,
      80: 35.355339,
      147: 35.355339,
      196: 35.355339,
      218: 35.355339,
      235: 35.355339,
    }),
  )
# ---
# name: test_trussopt[short_cantilever_clarabel].1
  '''
         problem_name filter_level width height n_load_points n_patterns_total n_patterns_active load_large load_small iterations final_volume n_members_final n_nodes n_ground_structure primal_method                  notes
  0  short cantilever          1.0     3      6             1                2                 1       50.0        5.0          2        300.0              81      28                251   load_factor  short cantliever test
  '''
# ---
# name: test_trussopt[short_cantilever_mosek]
  tuple(
    np.float64(300.0),
    dict({
      2: 35.355339,
      80: 35.355339,
      147: 35.355339,
      196: 35.355339,
      218: 35.355339,
      235: 35.355339,
    }),
  )
# ---
# name: test_trussopt[short_cantilever_mosek].1
  '''
         problem_name filter_level width height n_load_points n_patterns_total n_patterns_active load_large load_small iterations final_volume n_members_final n_nodes n_ground_structure primal_method                  notes
  0  short cantilever          1.0     3      6             1                2                 1       50.0        5.0          2        300.0              83      28                251   load_factor  short cantliever test
  '''
# ---
# name: test_trussopt[spanning_example_pinned_clarabel]
  tuple(
    np.float64(172.092001),
    dict({
      3: 6.623232,
      22: 2.121751,
      946: 6.623232,
      955: 2.121751,
      1068: 6.623232,
      1668: 6.623232,
      1903: 6.623231,
      1950: 2.121751,
      2185: 2.121751,
      2204: 6.623231,
      2466: 6.623232,
      2588: 6.623232,
      2724: 3.954,
      2725: 3.954,
    }),
  )
# ---
# name: test_trussopt[spanning_example_pinned_clarabel].1
  '''
         problem_name filter_level width height n_load_points n_patterns_total n_patterns_active load_large load_small iterations final_volume n_members_final n_nodes n_ground_structure primal_method                  notes
  0  spanning example          1.0    18      4             2                4                 3       3.75      0.204          9   172.092001             430      95               2734   load_factor  spanning example test
  '''
# ---
# name: test_trussopt[spanning_example_pinned_mosek]
  tuple(
    np.float64(172.092),
    dict({
      3: 6.623233,
      22: 2.121754,
      946: 6.623233,
      955: 2.121754,
      1068: 6.623233,
      1668: 6.623233,
      1903: 6.623233,
      1950: 2.121754,
      2185: 2.121754,
      2204: 6.623233,
      2466: 6.623233,
      2588: 6.623233,
      2724: 3.954,
      2725: 3.954,
    }),
  )
# ---
# name: test_trussopt[spanning_example_pinned_mosek].1
  '''
         problem_name filter_level width height n_load_points n_patterns_total n_patterns_active load_large load_small iterations final_volume n_members_final n_nodes n_ground_structure primal_method                  notes
  0  spanning example          1.0    18      4             2                4                 3       3.75      0.204         12      172.092             492      95               2734   load_factor  spanning example test
  '''
# ---
# name: test_trussopt[spanning_example_roller_clarabel]
  tuple(
    np.float64(266.990185),
    dict({
      0: 1.875,
      20: 4.192627,
      50: 1.875,
      103: 1.875,
      154: 1.875,
      206: 1.875001,
      257: 4.996625,
      260: 2.653149,
      280: 0.110126,
      304: 0.925625,
      310: 6.662749,
      315: 1.490227,
      333: 0.745114,
      360: 7.093687,
      365: 0.363398,
      408: 0.143646,
      413: 7.820125,
      420: 0.649746,
      437: 0.324873,
      464: 7.820125,
      472: 0.073417,
      476: 0.073417,
      510: 0.033844,
      511: 0.033844,
      516: 7.093687,
      529: 0.649746,
      540: 0.324873,
      567: 6.662749,
      582: 0.363398,
      614: 0.143646,
      620: 4.996625,
      635: 1.490227,
      645: 0.745114,
      670: 1.875001,
      687: 2.65315,
      696: 0.110126,
      718: 0.925625,
      723: 1.875,
      774: 1.875,
      826: 1.875,
      877: 1.875,
      957: 4.192627,
      1065: 2.37305,
      1067: 1.186525,
      1151: 0.773844,
      1153: 0.162517,
      1168: 0.903168,
      1181: 0.764541,
      1238: 0.54725,
      1254: 0.040046,
      1267: 0.220345,
      1280: 0.06965,
      1282: 0.023217,
      1453: 0.023217,
      1455: 0.06965,
      1499: 0.54725,
      1511: 0.040046,
      1519: 0.220345,
      1583: 0.162517,
      1585: 0.773844,
      1596: 0.903168,
      1605: 0.764541,
      1669: 1.186525,
      1671: 2.37305,
      1810: 0.8358,
      1811: 3.311616,
      1869: 0.2786,
      1872: 0.146835,
      1890: 1.139346,
      1947: 0.440505,
      1950: 0.328367,
      1964: 0.110126,
      2008: 0.745114,
      2024: 0.023217,
      2067: 0.324873,
      2068: 0.324873,
      2083: 0.023217,
      2127: 0.745114,
      2143: 0.110126,
      2185: 0.328367,
      2188: 0.440505,
      2234: 0.146835,
      2237: 0.2786,
      2245: 1.139346,
      2295: 3.311616,
      2296: 0.8358,
      2382: 0.881011,
      2406: 3.432567,
      2448: 0.152198,
      2508: 0.110126,
      2526: 0.023217,
      2528: 0.023217,
      2546: 0.110126,
      2606: 0.152198,
      2648: 3.432567,
      2672: 0.881011,
      2720: 0.985,
      2721: 0.985,
      2722: 0.985,
      2723: 0.985,
      2724: 5.924,
      2725: 5.924,
      2726: 0.985,
      2727: 0.985,
      2728: 0.985,
      2729: 0.985,
    }),
  )
# ---
# name: test_trussopt[spanning_example_roller_clarabel].1
  '''
         problem_name filter_level width height n_load_points n_patterns_total n_patterns_active load_large load_small iterations final_volume n_members_final n_nodes n_ground_structure primal_method                  notes
  0  spanning example          1.0    18      4             2                4                 3       3.75      0.204         10   266.990185             533      95               2734   load_factor  spanning example test
  '''
# ---
# name: test_trussopt[spanning_example_roller_mosek]
  tuple(
    np.float64(266.990185),
    dict({
      0: 1.875,
      20: 4.192627,
      50: 1.875,
      103: 1.875,
      154: 1.875,
      206: 1.875,
      257: 4.996625,
      260: 2.653151,
      280: 0.110126,
      304: 0.925625,
      310: 6.66275,
      315: 1.490228,
      333: 0.745114,
      360: 7.093687,
      365: 0.363398,
      408: 0.143646,
      413: 7.820125,
      420: 0.649745,
      437: 0.324873,
      464: 7.820125,
      472: 0.073418,
      476: 0.073418,
      510: 0.033844,
      511: 0.033844,
      516: 7.093687,
      529: 0.649745,
      540: 0.324873,
      567: 6.66275,
      582: 0.363398,
      614: 0.143646,
      620: 4.996625,
      635: 1.490228,
      645: 0.745114,
      670: 1.875,
      687: 2.653151,
      696: 0.110126,
      718: 0.925625,
      723: 1.875,
      774: 1.875,
      826: 1.875,
      877: 1.875,
      957: 4.192627,
      1065: 2.37305,
      1067: 1.186525,
      1151: 0.773844,
      1153: 0.162517,
      1168: 0.903168,
      1181: 0.764542,
      1238: 0.54725,
      1254: 0.040046,
      1267: 0.220346,
      1280: 0.06965,
      1282: 0.023217,
      1453: 0.023217,
      1455: 0.06965,
      1499: 0.54725,
      1511: 0.040046,
      1519: 0.220346,
      1583: 0.162517,
      1585: 0.773844,
      1596: 0.903168,
      1605: 0.764542,
      1669: 1.186525,
      1671: 2.37305,
      1810: 0.8358,
      1811: 3.311617,
      1869: 0.2786,
      1872: 0.146835,
      1890: 1.139347,
      1947: 0.440505,
      1950: 0.328367,
      1964: 0.110126,
      2008: 0.745114,
      2024: 0.023217,
      2067: 0.324873,
      2068: 0.324873,
      2083: 0.023217,
      2127: 0.745114,
      2143: 0.110126,
      2185: 0.328367,
      2188: 0.440505,
      2234: 0.146835,
      2237: 0.2786,
      2245: 1.139347,
      2295: 3.311617,
      2296: 0.8358,
      2382: 0.881011,
      2406: 3.432567,
      2448: 0.152198,
      2508: 0.110126,
      2526: 0.023217,
      2528: 0.023217,
      2546: 0.110126,
      2606: 0.152198,
      2648: 3.432567,
      2672: 0.881011,
      2720: 0.985,
      2721: 0.985,
      2722: 0.985,
      2723: 0.985,
      2724: 5.924,
      2725: 5.924,
      2726: 0.985,
      2727: 0.985,
      2728: 0.985,
      2729: 0.985,
    }),
  )
# ---
# name: test_trussopt[spanning_example_roller_mosek].1
  '''
         problem_name filter_level width height n_load_points n_patterns_total n_patterns_active load_large load_small iterations final_volume n_members_final n_nodes n_ground_structure primal_method                  notes
  0  spanning example          1.0    18      4             2                4                 3       3.75      0.204          9   266.990185             531      95               2734   load_factor  spanning example test
  '''
# ---
# name: test_trussopt[square_cantilever_clarabel]
  tuple(
    np.float64(2070.370371),
    dict({
      0: 16.666667,
      2: 12.272754,
      11: 7.444326,
      12: 62.328294,
      17: 12.350842,
      45: 16.666667,
      94: 16.666667,
      140: 16.666667,
      189: 16.666666,
      235: 16.666666,
      284: 16.666666,
      330: 16.666666,
      397: 52.704624,
      467: 12.272754,
      881: 12.272754,
      924: 7.444326,
      989: 62.112997,
      993: 5.176082,
      1221: 12.272753,
      1286: 2.995519,
      1288: 11.982077,
      1352: 66.782305,
      1354: 35.355339,
      1512: 8.888074,
      1514: 7.689655,
      1520: 3.105649,
      1564: 30.758622,
      1566: 11.785112,
      1569: 38.225958,
      1615: 35.355339,
      1695: 8.888075,
      1748: 31.705261,
      1780: 37.267799,
      1845: 8.888075,
      1867: 38.225958,
      1896: 37.396977,
      1954: 8.888075,
    }),
  )
# ---
# name: test_trussopt[square_cantilever_clarabel].1
  '''
          problem_name filter_level width height n_load_points n_patterns_total n_patterns_active load_large load_small iterations final_volume n_members_final n_nodes n_ground_structure primal_method                   notes
  0  square cantilever          1.0     8      8             2                4                 1       50.0        5.0          6  2070.370371             383      81               2040   load_factor  square cantliever test
  '''
# ---
# name: test_trussopt[square_cantilever_mosek]
  tuple(
    np.float64(2070.37037),
    dict({
      0: 16.666667,
      2: 14.997594,
      11: 4.425264,
      12: 62.328296,
      17: 13.033368,
      45: 16.666667,
      94: 16.666667,
      140: 16.666667,
      189: 16.666667,
      235: 16.666667,
      284: 16.666667,
      330: 16.666667,
      397: 52.704628,
      467: 14.997594,
      881: 14.997594,
      924: 4.425264,
      989: 62.112999,
      993: 5.176083,
      1221: 14.997594,
      1286: 3.161056,
      1288: 12.644224,
      1352: 66.782307,
      1354: 35.355339,
      1512: 9.053612,
      1514: 10.414494,
      1520: 3.10565,
      1564: 41.657978,
      1566: 11.785113,
      1569: 26.506942,
      1615: 35.355339,
      1695: 9.053612,
      1748: 42.940061,
      1780: 37.2678,
      1845: 9.053612,
      1867: 26.506942,
      1896: 37.396978,
      1954: 9.053612,
    }),
  )
# ---
# name: test_trussopt[square_cantilever_mosek].1
  '''
          problem_name filter_level width height n_load_points n_patterns_total n_patterns_active load_large load_small iterations final_volume n_members_final n_nodes n_ground_structure primal_method                   notes
  0  square cantilever          1.0     8      8             2                4                 1       50.0        5.0          6   2070.37037             377      81               2040   load_factor  square cantliever test
  '''
# ---
